@@ -191,7 +191,7 @@ Jillian Durham
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2014 Jillian Durham (jillian@sanger.ac.uk)
+Copyright (C) GRL by 2014 Jillian Durham (jillian@sanger.ac.uk)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
