@@ -77,7 +77,7 @@ David K. Jackson
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2011 David K. Jackson (david.jackson@sanger.ac.uk)
+Copyright (C) 2011 GRL by David K. Jackson (david.jackson@sanger.ac.uk)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
