@@ -4,7 +4,8 @@ CHANGES
  - samplesheet regenerated when the existing file does not come from the currently
    pending run
  - samplesheet daemon moved to a staging server where samplesheets are stored
- 
+ - copyright for all modules and script belongs to GRL - the copyright
+    notice edited where it was incorrect 
 
 release 77.0
  - the build file and module - code improvements, POD and PBP for the module
